test/FAIL/exitcmd/02_test_exit.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="to many arguments"
#-------

exit jdlqs
